# Janus

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  agents.py  config.py  docker-compose.prod.yml  docker-compose.yml  gate.py  implementation_plan.md  janus_audit_summary.md  observability.py  orchestrator.py  pyproject.toml  requirements.txt  retrieval.py  worker.py
.github/workflows/: ci.yml  deploy.yml
api/: app.py  auth.py  schemas.py
core/: __init__.py  agents.py  config.py  diagnostic.py  gate.py  llm_client.py  notifications.py  observability.py  orchestrator.py  path_safety.py  repo_context.py  retrieval.py  worker.py
data/: real_catch_examples.seed.jsonl
demo_repo/: inventory.py
demo_repo/tests/: test_inventory.py
docker/: sandbox.Dockerfile
docs/: ARCHITECTURE.md  RUNBOOK.md  Roadmap.md
evals/: eval_api.py  eval_gate.py  eval_llm_client.py  eval_notifications.py  eval_path_safety.py  eval_repo_context.py  eval_retrieval.py  eval_reviewer.py  eval_storage_db.py
mcp_server/: server.py
retrieval_pipeline/: __init__.py  ingest.py  schema.py
scripts/: reproduce_persist_hang.sh
storage/: db.py  models.py
